	- Fixed LEB being named "test"
	- Fixed vanilla custom icons not being present
	- "Assert Control" focus in North Korea will now correctly annex the Korean civil war nation
	- Declare Independence for Hong Kong should now end puppet status properly
	- Fixed LIC, MNC, and ADO ability to have buildings.
	- Fixed a hole in the Syrian Republican Guard template

Content:
	- Reworked Officer Corps for GRE, PRU, PAN, PAR, PHI, NEP, MNT, SUR, and NGR

Database
	- Added Nagmachon (IFV 1995) to Israel in 2000 bookmark
	- Updated Israel's population to match real life numbers
	- Patched remaining goals_shine.gfx errors
	- Switched loadup scenario to be 2000 vs 2017
	- Increased Greece's starting military spending level by 1
	- Changed Greece's starting convoys 150 -> 400
	- Futuristic Nuclear Reactors now has the proper historical year of 2015

v1.6.1 - Hotfix
AI:
	- Removed minors from mockup missile defense AI (including HLS & SMA)
	- Improved project AI so they should now be more willing to put other buildings in project queues
	- Improved logging of AI Investment targets so Bird can make better AI (Bird fix AI)
	- Added a AI check for the AI to ignore taking debt if they fit well within targeted budgets
	- The AI will be more likely to keep their policies in line with their focus trees
	- AI will now use 'revert ideas' decisions for Poland
	- Fixed and added historical AI for the nordic countries
	- The Nigerian AI should no longer ping pong between Islamic and Christian religious paths
	- Ukrainian AI should no longer bum rush the Baltic-Black Sea Union every game
	- Sanity checks for Korea. They shouldn't take their wargoals for JAP or USA if they're currently at war with South Korea

Bugfixes:
	- Civilian Folder Horizontal Scrollbar patched
	- Fixed diplomatic actions UI issues for resolutions smaller than 1920x1080
	- Fixed policies UI for resolutions smaller than 1920x1080
	- Bosphorus strait fixes (map & missile launch triggers)