@@ -4386,11 +4386,23 @@ focus_tree = {
 			if = {
 				limit = { NOT = { has_completed_focus = SYR_join_wto } }
 				custom_effect_tooltip = TT_SYR_LOANS_NO_WTO
-				multiply_variable = { debt = 0.6 }
+				if = {
+					limit = { check_variable = { debt > 40 } }
+					subtract_from_variable = { debt = 40 }
+				}
+				else = {
+					set_variable = { debt = 0 }
+				}
 			}
 			else = {
 				custom_effect_tooltip = TT_SYR_LOANS_WTO
-				multiply_variable = { debt = 0.4 }
+				if = {
+					limit = { check_variable = { debt > 60 } }
+					subtract_from_variable = { debt = 60 }
+				}
+				else = {
+					set_variable = { debt = 0 }
+				}
 			}
 			set_temp_variable = { temp_opinion = -5 }
 			change_international_bankers_opinion = yes
