@@ -96,12 +96,12 @@
 
  ##Economic Branch
  TT_LOAN_5_BILLION: "Our §YDebt§! increases by §R$5 Billion§!!\n"
- TT_SYR_RENEGOTIATE_LOANS: "Reduce our §YDebt§! by §G22.5$ Billion§!\n"
+ TT_SYR_RENEGOTIATE_LOANS: "Reduce our §YDebt§! by §G$$22.5 Billion§!\n"
  TT_SYR_HAS_TAKEN_LOANS: "We have taken a loan from another country\n"
  TT_SYR_INVEST_IN_FINANCE: "Move §Y$5 Billion§! from our §YTreasury§! to §YInternational Investments§!\n"
  TT_SYR_NATIONALISE_BANKS: "Add §Y$5 Billion§! to our treasury\n"
- TT_SYR_LOANS_NO_WTO: "40% of our §YDebt§! is forgiven. If we have joined the WTO, 60% of our §YDebt§! will be forgiven\n"
- TT_SYR_LOANS_WTO: "Because we have joined the WTO, 60% of our §YDebt§! will be forgiven\n"
+ TT_SYR_LOANS_NO_WTO: "Reduce our §YDebt§! by §G$$40 Billion§!. If we have joined the WTO, our §YDebt§! will be reduced by §G$$60 Billion§!\n"
+ TT_SYR_LOANS_WTO: "Because we have joined the WTO, our §YDebt§! will be reduced by §G$$60 Billion§!\n"
  TT_SYR_ANIME: "§REncouraging anime might have dramatic impact on our population§!\n"
  TT_SYR_BAKDASH: "§Y$syria_bakdash$§! impact on §YAdditional Income§!: $§G0.040§! billion"
 
