@@ -9,6 +9,7 @@ Bugfixes:
 	- Declare Independence for Hong Kong should now end puppet status properly
 	- Fixed LIC, MNC, and ADO ability to have buildings.
 	- Fixed a hole in the Syrian Republican Guard template
+	- Fixed Syrian debt negotiation exploit
 
 Content:
 	- Reworked Officer Corps for GRE, PRU, PAN, PAR, PHI, NEP, MNT, SUR, and NGR
